Bugfix original image stretching

--- a/app/assets/stylesheets/blurred_image_tag.css
+++ b/app/assets/stylesheets/blurred_image_tag.css
@@ -33,4 +33,5 @@
   top: 0;
   bottom: 0;
   margin: auto;
+  height: auto;
 }
